// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiExpression props color accent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-14yfrkt-euiExpression-accent"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-wybevs-euiExpression__description-accent-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color danger is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-1t9nwpi-euiExpression-danger"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-xmg3v2-euiExpression__description-danger-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color primary is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-1wf5mi3-euiExpression-primary"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-n7j0az-euiExpression__description-primary-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color subdued is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-1atpxp1-euiExpression-subdued"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-1becgya-euiExpression__description-subdued-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color success is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-eius8q-euiExpression-success"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color warning is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-1palf6v-euiExpression-warning"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-14u5oc3-euiExpression__description-warning-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props descriptionWidth changes the description&apos;s width when using columns 1`] = `
<span
  class="euiExpression css-1tgfhnm-euiExpression-success-columns"
>
  <span
    class="euiExpression__description css-xmg3v2-euiExpression__description-danger-isUppercase"
    style="flex-basis:50px"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
  <span
    class="euiExpression__icon css-lpchbn-euiExpression__icon"
    color="danger"
    data-euiicon-type="alert"
  />
</span>
`;

exports[`EuiExpression props display can be columns 1`] = `
<span
  class="euiExpression css-1tgfhnm-euiExpression-success-columns"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
    style="flex-basis:20%"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive false renders inactive 1`] = `
<span
  class="euiExpression css-eius8q-euiExpression-success"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive true renders active 1`] = `
<span
  class="euiExpression css-11jbf98-euiExpression-success-base-success"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isInvalid renders error state 1`] = `
<span
  class="euiExpression css-eius8q-euiExpression-success"
>
  <span
    class="euiExpression__description css-xmg3v2-euiExpression__description-danger-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
  <span
    class="euiExpression__icon css-lpchbn-euiExpression__icon"
    color="danger"
    data-euiicon-type="alert"
  />
</span>
`;

exports[`EuiExpression props textWrap can truncate text 1`] = `
<span
  class="euiExpression css-uf8253-euiExpression-success-truncate"
>
  <span
    class="euiExpression__description css-9x7o8i-euiExpression__description-success-isUppercase-truncate"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1v2wlqg-euiExpression__value-truncate"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props uppercase false renders inherited case 1`] = `
<span
  class="euiExpression css-eius8q-euiExpression-success"
>
  <span
    class="euiExpression__description css-jpzo5r-euiExpression__description-success"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props uppercase true renders uppercase 1`] = `
<span
  class="euiExpression css-eius8q-euiExpression-success"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression render with only description 1`] = `
<button
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-swryo8-euiExpression-isClickable-success"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
</button>
`;

exports[`EuiExpression renders 1`] = `
<button
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 css-swryo8-euiExpression-isClickable-success"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description css-rx2vvl-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value css-1ci73vy-euiExpression__value"
  >
    42
  </span>
</button>
`;
